--- a/package.json
+++ b/package.json
@@ -9,17 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.194",
+    "@types/mapbox-gl": "^2.7.11",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "ag-grid-community": "^29.3.2",
+    "ag-grid-react": "^29.3.2",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.3.0",
+    "csv-parse": "^5.3.8",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "leaflet": "^1.9.3",
+    "lodash": "^4.17.21",
+    "mapbox-gl": "^2.14.1",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.3",
+    "@types/react-leaflet": "^3.0.0"
   }
 }
